# agent-ensemble

./: .gitignore  CLAUDE.md  Dockerfile.test  README.md  THIRD-PARTY-LICENSES  install.sh  pyproject.toml
agents/: en-acceptance-designer-reviewer.md  en-acceptance-designer.md  en-agent-builder-reviewer.md  en-agent-builder.md  en-business-discoverer.md  en-business-reviewer.md  en-data-engineer-reviewer.md  en-data-engineer.md  en-deal-closer.md  en-documentarist-reviewer.md  en-documentarist.md  en-functional-software-crafter.md  en-outreach-writer.md  en-platform-architect-reviewer.md  en-platform-architect.md  en-product-discoverer-reviewer.md  en-product-discoverer.md  en-product-owner-reviewer.md  en-product-owner.md  en-researcher-reviewer.md  en-researcher.md  en-software-crafter-reviewer.md  en-software-crafter.md  en-solution-architect-reviewer.md  en-solution-architect.md  en-troubleshooter-reviewer.md  en-troubleshooter.md  en-tutorialist-reviewer.md  en-tutorialist.md  en-ux-designer.md  en-workshopper-reviewer.md  en-workshopper.md
board/: index.html  package-lock.json  package.json  playwright.config.ts  stryker.directory-browser.conf.json  tsconfig.json  vitest-setup.ts  vitest.config.ts
commands/: audit.md  continue.md  debug.md  deliver.md  design.md  devops.md  diagram.md  discover.md  discuss.md  distill.md  document.md  execute.md  fast-forward.md  finalize.md  forge.md  hotspot.md  mikado.md  mutation-test.md  new.md  refactor.md  research.md  review.md  rigor.md  roadmap.md  root-why.md
docs/: dor-checklist.md
scripts/: fetch-vendor.sh  (+3 more)
(+496 files in other folders)
